fix(header) modificato logo

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="web-app">
         <header>    
-            <nav class="container-fluid d-flex p-2 align-items-center justify-content-between">
+            <nav class="d-flex p-2 align-items-center justify-content-between">
                 <a class="col-1 d-flex d-lg-none" href="#">
-                    <figure class="figure m-0">
-                        <img class="img-fluid d-block" src="./assets/img/mobile-logo.png" alt="logo">
+                    <figure class="figure m-0 w-50">
+                        <img class="img-fluid d-block" src="./assets/img/mobile-logo.svg" alt="logo">
                     </figure>
                 </a>
                 <figure class="figure m-0 d-none d-lg-block">
@@ -63,8 +63,10 @@
 
 
 
-                <aside>
+                <aside class="">
+                    <div>
 
+                    </div>
                 </aside>
 
 
