--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
 
 
-                <div class="web-app-body-container p-0 w-100">
+                <div class="web-app-body-container p-0 w-100 overflow-auto">
                     <div class="web-app-body-header bg-primary d-flex flex-column text-light p-2 flex-md-row justify-content-md-between align-items-md-center">
                         <div class="d-flex align-items-center gap-2 pb-3 order-md-2 larghezza-lg">
                             <span>Nuovo Studente</span>
@@ -213,6 +213,75 @@
                             <span class="fs-3">125</span>
                         </div>
                     </div>
+
+                    <div class="px-3 pt-3">
+                        <div class="card">
+                            <div class="card-header">
+                              Featured
+                            </div>
+                            <ul class="list-group list-group-flush px-3">
+                              <li class="list-group-item">An item</li>
+                              <li class="list-group-item">A second item</li>
+                              <li class="list-group-item">A third item</li>
+                            </ul>
+                        </div>
+
+
+
+
+                        <div class="card">
+                            <div class="card-header">
+                              Featured
+                            </div>
+                            <ul class="list-group list-group-flush px-3">
+                              <li class="list-group-item">An item</li>
+                              <li class="list-group-item">A second item</li>
+                              <li class="list-group-item">A third item</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+
+
+
+                    <div class="px-3 pt-3">
+                        <div class="card">
+                            <div class="card-header">
+                              Featured
+                            </div>
+                            <ul class="list-group list-group-flush px-3">
+                              <li class="list-group-item">An item</li>
+                              <li class="list-group-item">A second item</li>
+                              <li class="list-group-item">A third item</li>
+                            </ul>
+                        </div>
+
+
+
+
+                        <div class="card">
+                            <div class="card-header">
+                              Featured
+                            </div>
+                            <ul class="list-group list-group-flush px-3">
+                              <li class="list-group-item">An item</li>
+                              <li class="list-group-item">A second item</li>
+                              <li class="list-group-item">A third item</li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+
+
+
+
+
+
+
+
+
 
                 </div>
             </div>
